# fastapi-boilerplate

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8682353ce56b_create_users_table.py
lib/: config.py  db.py
scripts/: reset_migrations.sh  upgrade_migrations.sh
